--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
-    "lzjs": "^1.3.0",
-    "net": "^1.0.2"
+    "crc-32": "^1.2.0",
+    "lzjs": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^13.7.0"
